--- a/todo
+++ b/todo
@@ -23,3 +23,8 @@ https://opengameart.org/content/boom-pack-1
 
 
 https://opengameart.org/content/space-ship-building-bits-volume-1
+
+
+Server: On startup it makes the world and then nothing.
+
+Client: COnnects, gets current world, sends and recieves world.
